Fixed responsive issues, added CTA
Fixed responsive issues, added CTA

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Mario Bros CV - Avijeet Nair</title>
+    <title>Avijeet Nair - Mario-themed CV</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width">
 
@@ -19,7 +19,15 @@
             Hi, I'm Avijeet. <br><br>
             Use the arrow buttons on your keyboard or the ones on screen (if you're on mobile).<br><br>
             This will help you navigate through my CV.<br><br>
-            Good Day! :)
+            Good Day! :) &nbsp;&nbsp;
+            <a href="mailto:avijeetnair.avj@gmail.com" style="color: blue; text-decoration: underline; font-weight: bold;">
+                Email
+            </a>
+            &nbsp;
+            <a href="https://www.linkedin.com/in/avijeet-nair-b46941332/" style="color: blue; text-decoration: underline; font-weight: bold;">
+                Linkedin
+            </a>
+            
         </div>
         
         <div class="box">
