Update index.html - CTA format

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
             <b>Avijeet Nair</b>
             Hi, I'm Avijeet. <br><br>
             Use the arrow buttons on your keyboard or the ones on screen (if you're on mobile).<br><br>
-            This will help you navigate through my CV.<br><br>
-            Good Day! :) &nbsp;&nbsp;
+            This will help you navigate through my CV. Good Day! :) <br><br>
             <a href="mailto:avijeetnair.avj@gmail.com" style="color: blue; text-decoration: underline; font-weight: bold;">
                 Email
             </a>
